# OmniForge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  OmniForge-Data-Flow.drawio  README.md  compose.yaml  devcontainer.json  devcontainer2.json  forge_override.json  langs.json  omniforge_state.db  omniforge_state.db-shm  omniforge_state.db-wal  template.pkr.hcl
.devcontainer/: devcontainer2.json
.github/workflows/: wiki.yml
App/: Cargo.toml  README.md  test.java
App/.devcontainer/: devcontainer.json
App/src/: main.rs  models.rs  ui.rs
App/src/commands/: config.rs  logs.rs  mod.rs  push.rs  rollback.rs  scale.rs  status.rs  up.rs
builders/: rust.json
src/: _old.rs  main.rs  ssh.rs  temp.rs
src/api/: deploy.rs  mod.rs
src/autoscalar/: mod.rs  old_mod.rs  proposal.rs
src/autoscaler/: README.md
src/deployment/: README.md  mod.rs
src/image_builder/: common.rs  ensure_deps.rs  ensure_docker.rs  ensure_npm.rs  mod.rs
src/image_builder/ensure/: common.rs  ensure_devcontainers_cli.rs  ensure_docker.rs  ensure_npm.rs  mod.rs
src/image_builder/image_gen/: db.rs  mod.rs  scanner.rs
src/image_gen/: mod.rs
src/interfaces/: mod.rs
src/interfaces/agent/: mod.rs
