[package]
name = "omni-forge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.2.1"
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0.3"
hyper = "1.5.0"
russh-keys = "0.46.0"
russh = "0.46.0"
async-trait = "0.1.83"
log = "0.4.22"
phf = { version = "0.11.2", features = ["macros", "serde"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
warp = "0.3.7"
flate2 = "1.0.35"
futures-util = "0.3.31"
tar = "0.4.43"
reqwest = { version = "0.12.9", features = ["json"] }
libomni = "0.2.3"
packer_rs = "0.2.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket-multipart-form-data = "0.10.7"
zip-extract = { version = "0.2.1", features = ["bzip2", "deflate", "unreserved", "xz", "zstd"] }

[features]
default = []
